# edge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  architecture.toml  book.toml  struct.toml
daemon/main/: Cargo.toml
daemon/main/config/: application.toml  default.toml
daemon/main/src/: lib.rs
daemon/main/tests/: runtime_manager_int_test.rs
egress/: Cargo.toml  README.md
egress/cassette/src/: lib.rs
egress/config/: application.toml
egress/database/: Cargo.toml
egress/database/src/: lib.rs
egress/database/tests/: database_outbound_int_test.rs
egress/docs/3-design/: architecture.md
egress/docs/4-development/: developer_guide.md
egress/examples/: basic.rs
egress/file/: Cargo.toml
egress/file/src/: lib.rs
egress/file/tests/: file_outbound_int_test.rs
egress/grpc-auth-bearer/: Cargo.toml
egress/grpc-auth-mtls/: Cargo.toml
egress/grpc-authz/: Cargo.toml
egress/grpc-retry/config/: application.toml
egress/grpc-retry/tests/: retry_int_test.rs
egress/main/: Cargo.toml
egress/main/examples/: grpc_client.rs  http_client.rs
egress/main/src/: state.rs
egress/notification/: Cargo.toml
egress/notification/src/: lib.rs
egress/notification/tests/: notification_outbound_int_test.rs
egress/payment/: Cargo.toml
egress/payment/src/: lib.rs
egress/payment/tests/: payment_outbound_int_test.rs
egress/src/: lib.rs  provider.rs
egress/src/api/: builder.rs  database.rs  egress.rs  egress_error.rs  error.rs  file.rs  file_outbound.rs  grpc_outbound.rs  http.rs  http_client.rs  http_outbound.rs  mod.rs  notification.rs  notification_sender.rs  outbound_sink.rs  output.rs  payment.rs  payment_gateway.rs  traits.rs
egress/src/core/: default_egress.rs  mod.rs
egress/src/gateway/: mod.rs
egress/src/saf/: builder.rs  facade.rs  mod.rs
egress/tests/: builder_e2e_test.rs  validator_int_test.rs
gateway/: CHANGELOG.md  Cargo.toml  README.md
gateway/docs/2-planning/: backlog.md
gateway/docs/3-design/: architecture.md
gateway/src/: lib.rs  spi.rs
gateway/src/api/: daemon.rs  file.rs  http.rs  metrics.rs  mod.rs  payment.rs  pipeline.rs  process.rs  traits.rs
gateway/src/core/: metrics_bridge.rs  mod.rs  output.rs  pipeline.rs
gateway/src/saf/: builders.rs  config.rs  mod.rs
gateway/tests/: database_gateway_e2e_test.rs  database_outbound_e2e_test.rs  database_read_e2e_test.rs  database_write_e2e_test.rs  file_gateway_e2e_test.rs  file_inbound_e2e_test.rs  file_outbound_e2e_test.rs  fixtures_smoke_int_test.rs  gateway_int_test.rs  grpc_gateway_e2e_test.rs  http_gateway_e2e_test.rs  http_inbound_e2e_test.rs  http_live_int_test.rs  http_outbound_e2e_test.rs  notification_gateway_e2e_test.rs  payment_outbound_e2e_test.rs  rate_limit_e2e_test.rs  retry_e2e_test.rs  streaming_e2e_test.rs  swe_gateway_caching_e2e_test.rs  swe_gateway_e2e_test.rs  swe_gateway_int_test.rs  swe_gateway_load_e2e_test.rs  swe_gateway_security_e2e_test.rs  swe_gateway_stress_e2e_test.rs
gateway/tests/common/: mod.rs
http/: CHANGELOG.md  Cargo.toml  README.md  bootstrap.ps1  bootstrap.sh
http/auth/: Cargo.toml
http/auth/config/: application.toml
http/auth/examples/: auth.rs
http/auth/src/: lib.rs
http/auth/tests/: auth_config_int_test.rs  auth_middleware_int_test.rs  auth_strategy_int_test.rs  aws_sigv4_strategy_int_test.rs  basic_strategy_int_test.rs  bearer_strategy_int_test.rs  builder_e2e_test.rs  builder_int_test.rs  credential_resolver_int_test.rs  credential_source_int_test.rs  default_http_auth_int_test.rs  digest_strategy_int_test.rs  env_credential_resolver_int_test.rs  error_int_test.rs  gateway_int_test.rs  header_strategy_int_test.rs  http_auth_int_test.rs  noop_strategy_int_test.rs  strategy_factory_int_test.rs  traits_int_test.rs
http/breaker/: Cargo.toml
http/breaker/examples/: breaker.rs
http/breaker/src/: lib.rs
http/breaker/tests/: breaker_config_int_test.rs  breaker_layer_int_test.rs  breaker_state_int_test.rs  builder_e2e_test.rs  builder_int_test.rs  core_breaker_layer_int_test.rs  default_http_breaker_int_test.rs  error_int_test.rs  gateway_int_test.rs  host_breaker_int_test.rs  http_breaker_int_test.rs  traits_int_test.rs
http/cache/: Cargo.toml
http/cache/examples/: cache.rs
http/cache/src/: lib.rs
http/cache/tests/: builder_e2e_test.rs  builder_int_test.rs  cache_config_int_test.rs  cache_layer_int_test.rs  cached_entry_int_test.rs  core_cache_layer_int_test.rs  default_http_cache_int_test.rs  error_int_test.rs  gateway_int_test.rs  http_cache_int_test.rs  traits_int_test.rs
http/cassette/: Cargo.toml
http/cassette/examples/: cassette.rs
http/cassette/src/: lib.rs
http/cassette/tests/: body_scrubber_int_test.rs  builder_e2e_test.rs  builder_int_test.rs  cassette_config_int_test.rs  cassette_layer_int_test.rs  core_cassette_layer_int_test.rs  default_http_cassette_int_test.rs  error_int_test.rs  gateway_int_test.rs  http_cassette_int_test.rs  recorded_interaction_int_test.rs  saf_builder_int_test.rs  traits_int_test.rs
http/main/: Cargo.toml
http/main/config/: application.toml  architecture.toml
http/main/src/: lib.rs
http/main/tests/: builder_e2e_test.rs  default_stack_int_test.rs  error_int_test.rs  gateway_int_test.rs  stack_config_int_test.rs  traits_int_test.rs
http/rate/: Cargo.toml
http/rate/examples/: rate.rs
http/rate/src/: lib.rs
http/rate/tests/: builder_e2e_test.rs  builder_int_test.rs  core_rate_layer_int_test.rs  default_http_rate_int_test.rs  error_int_test.rs  gateway_int_test.rs  http_rate_int_test.rs  rate_config_int_test.rs  rate_layer_int_test.rs  token_bucket_int_test.rs  traits_int_test.rs
http/retry/: Cargo.toml
http/retry/examples/: retry.rs
http/retry/src/: lib.rs
http/retry/tests/: builder_e2e_test.rs  builder_int_test.rs  core_retry_layer_int_test.rs  default_http_retry_int_test.rs  error_int_test.rs  gateway_int_test.rs  http_retry_int_test.rs  retry_config_int_test.rs  retry_layer_int_test.rs  traits_int_test.rs
http/src/gateway/: input.rs  mod.rs  output.rs
http/tls/: Cargo.toml
(+433 files in other folders)
