[package]
name = "swe_edge_egress"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
authors = ["SWE Engineering Labs"]
repository = "https://github.com/sweengineeringlabs/edge"
description = "edge — L1 egress gateway: outbound adapters (database, HTTP client, payment, notification, file write, gRPC client)."
keywords = ["gateway", "egress", "outbound", "sea", "swe"]
categories = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "gateway"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
