[workspace]
resolver = "2"
members = ["main", "http", "grpc", "database", "file", "notification", "payment"]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT"
rust-version = "1.75"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"

[workspace.dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "2"
async-trait = "0.1"
futures     = "0.3"
tokio       = { version = "1.0", features = ["rt", "sync", "fs", "io-util"] }
parking_lot = "0.12"
walkdir     = "2"
uuid        = { version = "1.0", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
tracing     = "0.1"
mime_guess  = "2"
base64      = "0.22"
toml        = "0.8"
swe_justobserv_context = { git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
swe-observ-processes   = { package = "swe_justobserv_processes", git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
reqwest     = { version = "0.12", features = ["json"], default-features = false }

# Optional
sqlx        = { version = "0.8", default-features = false }
wiremock    = "0.6"

# Workspace-internal domain crates
swe-edge-egress-http         = { path = "http" }
swe-edge-egress-grpc         = { path = "grpc" }
swe-edge-egress-database     = { path = "database" }
swe-edge-egress-file         = { path = "file" }
swe-edge-egress-notification = { path = "notification" }
swe-edge-egress-payment      = { path = "payment" }

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"
