[package]
name = "edge-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sweengineeringlabs/edge"
authors = ["SWE Engineering Labs"]
rust-version = "1.75"
description = "edge — L1 inbound gateway: Gateway<Req,Resp> contract, Pipeline, hexagonal adapters"
keywords = ["gateway", "pipeline", "edge", "hexagonal", "swe"]
categories = ["web-programming", "development-tools"]

[package.metadata.struct-engine]
application_type = "full"

[features]
default = []

# Database backends
postgres = ["sqlx/postgres", "sqlx/runtime-tokio"]
mysql = ["sqlx/mysql", "sqlx/runtime-tokio"]
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio"]

# File storage backends
s3 = ["aws-sdk-s3", "aws-config"]

# HTTP backends
graphql = ["graphql_client"]

# Real outbound HTTP (reqwest-backed RestClient).
# Without this feature every outbound HTTP call returns
# GatewayError::NotSupported instead of silently faking a 200.
# See edge issue #1.
reqwest = ["dep:reqwest"]

# Notification backends
email = ["lettre"]

# Payment backends
stripe = ["async-stripe"]

# Tauri integration
tauri = ["dep:tauri"]

# Auth backed by sst-sdk (requires ../sst/sst-sdk checkout)
# auth = ["dep:sst-sdk"]

# Meta features
full = ["postgres", "s3", "email", "stripe"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["rt", "sync", "fs", "io-util"] }

# Sync primitives
parking_lot = "0.12"

# HTTP client utilities
base64 = "0.22"

# File system
walkdir = "2"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
# MDC (Mapped Diagnostic Context) — moved from the local-registry
# vendored `mdc-logging` crate to its successor `swe_justobserv_context`
# in the justobserv repo. Same `LogContext` / `with_log_context` API;
# source identical modulo the rename. Git dep so clean installs /
# CI runners without the local vendored registry can resolve it.
swe_justobserv_context = { git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
swe-observ-processes = { package = "swe_justobserv_processes", git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
mime_guess = "2"

# Optional: HTTP client
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }

# Optional: Database
sqlx = { version = "0.8", optional = true, default-features = false }

# Optional: S3
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

# Optional: GraphQL
graphql_client = { version = "0.14", optional = true }

# Optional: Email
lettre = { version = "0.11", optional = true, default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }

# Optional: Stripe
async-stripe = { version = "0.39", optional = true }

# Optional: Tauri integration
tauri = { version = "2", default-features = false, optional = true }

# Optional: Auth (backed by sst-sdk) — uncomment when ../sst/sst-sdk is available
# sst-sdk = { path = "../sst/sst-sdk", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"], default-features = false }
wiremock = "0.6"
