[workspace]
resolver = "2"
members = [
    "auth",
    "cache",
    "cassette",
    "breaker",
    "rate",
    "retry",
    "tls",
    "main",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"
authors = ["SWE Engineering Labs"]
repository = "https://github.com/sweengineeringlabs/edge"

[workspace.dependencies]
# Base HTTP transport — every middleware crate wraps/uses this.
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
# Middleware composition layer (TrueLayer). Each crate here implements
# the Middleware trait from this crate.
reqwest-middleware = "0.3"
# Used internally by some middleware impls (retry, rate).
http = "1"
# Common middleware error/result shape.
thiserror = "2"
# Async trait for the Middleware impls.
async-trait = "0.1"
# Runtime for impls that need timers (rate, breaker).
tokio = { version = "1", default-features = false }
# Span emission for observability — consumers opt in, not required.
tracing = { version = "0.1", default-features = false }
# Serialization for cassette fixtures.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# TOML parsing for the `from_config` loader in each middleware
# crate. Policy lives in `config/default.toml` files (per-crate)
# + `http/main/config/application.toml` (workspace) + consumer
# config — never in source as `Default::default()` literals.
toml = "0.8"

# --- External middleware we wrap (not re-implemented) ---
# Retry wrapper — we ship defaults + typed configs over it.
reqwest-retry = "0.6"
# HTTP cache wrapper — we ship an edge-friendly config over it.
# `manager-moka` enables the MokaManager storage backend.
http-cache-reqwest = { version = "0.14", features = ["manager-moka"] }
# Background sweep / eviction for rate + breaker state.
moka = { version = "0.12", features = ["future"] }

# Secret-wrapping for credential values. Blocks accidental
# Debug/Display; requires explicit `.expose_secret()` to read.
# Used by swe_http_auth to carry resolved env-var values through
# the strategy stack without risk of logging them.
secrecy = "0.10"

# Base64 encoding — Basic auth scheme, and anywhere else
# credential-looking bytes hit the wire as an ASCII header value.
base64 = "0.22"

# Cryptographic primitives for auth signing.
# sha2 / hmac — AWS SigV4 signature computation.
# md-5 — RFC 7616 Digest default hash algorithm.
# hex — lower-hex encoding of hash/MAC outputs.
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
hex = "0.4"

# Timezone-aware timestamp for AWS SigV4's X-Amz-Date header.
time = { version = "0.3", features = ["formatting", "macros"] }

# URL percent-encoding for SigV4 canonical-request construction.
percent-encoding = "2.3"

# Anyhow — required to construct
# `reqwest_middleware::Error::Middleware(anyhow::Error)` when a
# middleware layer surfaces its own error type (breaker-open,
# rate-limit-exhausted, etc.) through the reqwest-middleware
# chain.
anyhow = "1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
