[package]
name         = "swe-edge-egress"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "edge — L1 egress gateway: outbound adapters (database, HTTP client, payment, notification, file write, gRPC client)."
keywords     = ["gateway", "egress", "outbound", "sea", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "gateway"

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
serde.workspace             = true
serde_json.workspace        = true
thiserror.workspace         = true
async-trait.workspace       = true
futures.workspace           = true
tokio.workspace             = true
parking_lot.workspace       = true
walkdir.workspace            = true
uuid.workspace              = true
chrono.workspace            = true
tracing.workspace           = true
mime_guess.workspace        = true
base64.workspace            = true
toml.workspace              = true
swe_justobserv_context.workspace = true
swe-observ-processes.workspace   = true

swe-edge-egress-http.workspace         = true
swe-edge-egress-grpc.workspace         = true
swe-edge-egress-database.workspace     = true
swe-edge-egress-file.workspace         = true
swe-edge-egress-notification.workspace = true
swe-edge-egress-payment.workspace      = true

[dev-dependencies]
tokio    = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
tempfile = "3"
reqwest  = { version = "0.12", features = ["json"], default-features = false }
wiremock = "0.6"
