[package]
name         = "swe-edge-egress-notification"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "edge — egress notification outbound domain: notification types and sender trait."
keywords     = ["gateway", "egress", "notification", "sea", "swe"]
categories   = ["network-programming"]

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
async-trait.workspace = true
futures.workspace     = true
chrono.workspace      = true
uuid.workspace        = true
tracing.workspace     = true

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
