[package]
name = "swe_edge_http_main"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Workspace composition root — assembles the HTTP middleware stack from configured crate primitives."

[package.metadata.struct-engine]
application_type = "lib"
service_type = "orchestrator"

[lib]
path = "src/lib.rs"

[dependencies]
swe_edge_http_auth     = { path = "../auth" }
swe_edge_http_cache    = { path = "../cache" }
swe_edge_http_cassette = { path = "../cassette" }
swe_edge_http_breaker  = { path = "../breaker" }
swe_edge_http_rate     = { path = "../rate" }
swe_edge_http_retry    = { path = "../retry" }
swe_edge_http_tls      = { path = "../tls" }

thiserror.workspace = true

[dev-dependencies]
