[package]
name = "swe_http_retry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Opinionated retry middleware (wraps reqwest-retry with SWE defaults)"
keywords = ["http", "retry", "reqwest", "middleware", "swe"]
categories = ["web-programming::http-client"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
thiserror = { workspace = true }
# `from_config` loads policy from TOML. `serde` derives the
# schema; `toml` parses it. Policy values live in
# `config/default.toml` + consumer overrides — never as hardcoded
# literals in source.
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = []
# Emit spans via the `tracing` crate. Off by default so consumers
# without tracing infrastructure don't pay the cost.
tracing = ["dep:tracing"]
