[package]
name = "swedge-controlroom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "swedge — L2 controlroom: 5-concern facade (Job, Router, Handler, LifecycleMonitor)"
keywords = ["controlroom", "orchestration", "facade", "sea", "swe"]
categories = ["development-tools"]

[dependencies]
thiserror = "2"

[package.metadata.struct-engine]
application_type = "lib"


[lib]
path = "src/lib.rs"




[[test]]
name = "controlroom_int_test"
path = "tests/controlroom_int_test.rs"


[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[[test]]
name = "config_int_test"
path = "tests/config_int_test.rs"

[[test]]
name = "error_int_test"
path = "tests/error_int_test.rs"
[[test]]
name = "service_int_test"
path = "tests/service_int_test.rs"

[[test]]
name = "default_service_int_test"
path = "tests/default_service_int_test.rs"



[[test]]
name = "facade_e2e_test"
path = "tests/facade_e2e_test.rs"



[[test]]
name = "controlroom_e2e_test"
path = "tests/controlroom_e2e_test.rs"

[[test]]
name = "controlroom_security_test"
path = "tests/controlroom_security_test.rs"

[[test]]
name = "controlroom_caching_test"
path = "tests/controlroom_caching_test.rs"
