[package]
name = "edge-controlroom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "edge — L2 controlroom: 5-concern facade (Job, Router, Handler, LifecycleMonitor)"
keywords = ["controlroom", "orchestration", "facade", "sea", "swe"]
categories = ["development-tools"]

[dependencies]
thiserror = "2"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[package.metadata.struct-engine]
application_type = "lib"


[lib]
path = "src/lib.rs"
