[package]
name = "swedge-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "swedge — L1 inbound gateway: Gateway<Req,Resp> contract, Pipeline, middleware"
keywords = ["gateway", "pipeline", "edge", "hexagonal", "swe"]
categories = ["web-programming", "development-tools"]

[dependencies]
thiserror = "2"

[package.metadata.struct-engine]
application_type = "lib"


[lib]
path = "src/lib.rs"




[[test]]
name = "gateway_int_test"
path = "tests/gateway_int_test.rs"


[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[[test]]
name = "config_int_test"
path = "tests/config_int_test.rs"

[[test]]
name = "error_int_test"
path = "tests/error_int_test.rs"
[[test]]
name = "service_int_test"
path = "tests/service_int_test.rs"

[[test]]
name = "default_service_int_test"
path = "tests/default_service_int_test.rs"



[[test]]
name = "facade_e2e_test"
path = "tests/facade_e2e_test.rs"



[[test]]
name = "gateway_e2e_test"
path = "tests/gateway_e2e_test.rs"

[[test]]
name = "gateway_security_test"
path = "tests/gateway_security_test.rs"

[[test]]
name = "gateway_caching_test"
path = "tests/gateway_caching_test.rs"
